# copilot-agent

./: .env.example  .gitignore  README.md  plans.md  pyproject.toml  railway.toml  requirements.md
contexts/: AABW_Pitching_Playbook_Agent_Context.md  AABW_Submission_Agent_Context.md  problem_statement.md  research-and-solution-brief.md
contexts/outputs/: architecture.md  problem_statement_insight.md  requirements.md
contexts/raws/: AABW_Pitching_Playbook.md  AABW_Submission_Playbook.md
data/: benchmark_cases.jsonl  benchmark_corpus.json  benchmark_summary.txt  eval_cases.jsonl  synthetic_corpus.json
docs/: product-requirements.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.jsx  styles.css
hackathon_agentic_ai_prompt_pack/: 00_README.md  01_MASTER_PLAN.md  02_TASK_BOARD.md  03_PROMPT_RESEARCH_AND_SOLUTION.md  04_PROMPT_PRODUCT_REQUIREMENTS.md  05_PROMPT_ARCHITECTURE.md  06_PROMPT_DATA_MODELS.md  07_PROMPT_DATA_INGESTION.md  08_PROMPT_RETRIEVAL.md  09_PROMPT_AGENT_ARCHITECTURE.md  10_PROMPT_BACKEND_API.md  11_PROMPT_FRONTEND.md  12_PROMPT_SECURITY_AND_GUARDRAILS.md  13_PROMPT_EVALUATION_AND_OBSERVABILITY.md  14_PROMPT_CLOUD_DEPLOYMENT.md  15_PROMPT_SECRET_MANAGEMENT.md  16_PROMPT_GITHUB_REPOSITORY.md  17_PROMPT_DEMO_VIDEO.md  18_PROMPT_SLIDES.md  19_PROMPT_ANALYTICAL_REPORT.md  20_PROMPT_BUSINESS_MODEL_AND_APIFY.md  21_PROMPT_INTEGRATION_AND_FINAL_TEST.md  22_HACKATHON_EXECUTION_CHECKLIST.md  INDEX.md
src/aabw_agent/: __init__.py  api.py  benchmark.py  cli.py  config.py  conversation.py  corpus.py  deep_agent.py  env_doctor.py  evaluate.py  evaluators.py  ingestion.py  llm.py  observability.py  pdf_ingest.py  railway_entrypoint.py  schemas.py  synthetic_data.py  workflow.py
tests/: conftest.py  test_config_and_ingestion.py  test_conversation.py  test_corpus.py  test_evaluators.py  test_frontend_static.py  test_observability.py  test_schemas_config.py  test_synthetic_data.py  test_workflow.py  test_workflow_offline.py
