[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "aabw-aircraft-maintenance-agent"
version = "0.1.0"
description = "Bounded LangGraph workflow for aircraft maintenance evidence review"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "langchain>=1.0,<2.0",
    "langchain-openai>=1.0,<2.0",
    "langgraph>=1.0,<2.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "python-dotenv>=1.0,<2.0",
]

[project.scripts]
aabw-agent = "aabw_agent.cli:main"
aabw-evaluate = "aabw_agent.evaluate:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "ruff>=0.9,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
