[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "aabw-aircraft-maintenance-agent"
version = "0.1.0"
description = "Bounded LangGraph workflow for aircraft maintenance evidence review"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "deepagents>=0.6.12",
    "fastapi>=0.139.0",
    "langchain>=1.0,<2.0",
    "langchain-openai>=1.0,<2.0",
    "langfuse>=4.14.0",
    "langgraph>=1.0,<2.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.0,<2.0",
    "python-multipart>=0.0.32",
    "uvicorn>=0.51.0",
]

[project.scripts]
aabw-agent = "aabw_agent.cli:main"
aabw-api = "aabw_agent.api:main"
aabw-benchmark = "aabw_agent.benchmark:main"
aabw-doctor = "aabw_agent.env_doctor:main"
aabw-evaluate = "aabw_agent.evaluate:main"
aabw-ingest-pdf = "aabw_agent.pdf_ingest:main"
aabw-generate-synthetic = "aabw_agent.synthetic_data:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "ruff>=0.9,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
